--- a/deno.json
+++ b/deno.json
@@ -4,6 +4,7 @@
   },
   "imports": {
     "hono": "npm:hono@4.7.2",
-    "@supabase": "jsr:@supabase/supabase-js@2"
+    "@supabase": "jsr:@supabase/supabase-js@2",
+    "@config": "./api/config.ts"
   }
 }
