--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
-    "hono": "^4.7.5"
+    "hono": "^4.7.5",
+    "jose": "^6.0.11"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250214.0",
